[gd_scene load_steps=41 format=2]

[ext_resource path="res://game_assets/Tilesheet/tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EN_spikes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Obj_Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/EN_Dummy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/EventHandler.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Current_Room.gd" type="Script" id=6]
[ext_resource path="res://Rooms/Item.tscn" type="PackedScene" id=7]
[ext_resource path="res://Item.gd" type="Script" id=8]
[ext_resource path="res://Rooms/Enemies.gd" type="Script" id=9]
[ext_resource path="res://Rooms/level_template.gd" type="Script" id=10]
[ext_resource path="res://Rooms/EnemyInstances.gd" type="Script" id=11]

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 64, 64, 0, 64, 0, 64, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 0, 64, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 64, 64, 64, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 0, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 0, 0, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( 64, 64, 64, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=18]
resource_local_to_scene = true
0/name = "tilesheet_complete.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 192, 576, 192 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 19 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 45 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 960, 604 )

[node name="_Level" type="Node2D"]
script = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 18 )
collision_friction = 0.15
collision_layer = 8
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 131072, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 65545, 0, 0, 65546, 0, 65536, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 65536, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 262143, 0, 3, 196614, 0, 5, 196615, 0, 6, 196616, 0, 6, 196617, 0, 65541, 196618, 0, 0, 196619, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 327679, 0, 0, 262153, 0, 0, 262154, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 393215, 0, 65542, 327680, 0, 2, 327681, 0, 3, 327689, 0, 0, 327690, 0, 0, 327709, 0, 0, 327710, 0, 0, 458751, 0, 0, 393216, 0, 131072, 393217, 0, 0, 393225, 0, 0, 393226, 0, 0, 393246, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 65542, 458754, 0, 2, 458755, 0, 2, 458756, 0, 2, 458757, 0, 2, 458758, 0, 3, 458761, 0, 0, 458762, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 65536, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524297, 0, 0, 524298, 0, 65542, 524299, 0, 2, 524300, 0, 2, 524301, 0, 2, 524302, 0, 2, 524303, 0, 2, 524304, 0, 2, 524305, 0, 2, 524306, 0, 7, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 65536, 589840, 0, 0, 589841, 0, 0, 589853, 0, 1, 589854, 0, 2, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655389, 0, 0, 655390, 0, 0, 786431, 0, 0, 720896, 0, 0, 720925, 0, 0, 720926, 0, 0, 851967, 0, 0, 786432, 0, 0, 786461, 0, 0, 786462, 0, 0, 917503, 0, 0, 851997, 0, 0, 851998, 0, 65536, 983039, 0, 0, 917504, 0, 3, 917532, 0, 65537, 917533, 0, 65541, 917534, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983048, 0, 1, 983049, 0, 2, 983050, 0, 2, 983051, 0, 3, 983066, 0, 65537, 983067, 0, 2, 983068, 0, 131073, 983069, 0, 0, 983070, 0, 0, 1114111, 0, 0, 1048576, 0, 65542, 1048577, 0, 2, 1048578, 0, 2, 1048579, 0, 2, 1048580, 0, 2, 1048581, 0, 2, 1048582, 0, 2, 1048583, 0, 2, 1048584, 0, 65541, 1048585, 0, 131072, 1048586, 0, 0, 1048587, 0, 65542, 1048588, 0, 2, 1048589, 0, 2, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 2, 1048593, 0, 3, 1048598, 0, 1, 1048599, 0, 2, 1048600, 0, 2, 1048601, 0, 2, 1048602, 0, 131073, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Dummy4" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 936, 392 )
scale = Vector2( 1.5, 1.5 )
dam = 35.0
hea = 400.0

[node name="Dummy3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 328, 888 )

[node name="Dummy2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 544, 744 )

[node name="Dummy" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 888, 832 )
scale = Vector2( 1, 0.5 )
dam = 50.0
hea = 150.0
speed = 300

[node name="EnemyInstances" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Spike" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 1184, 1056 )

[node name="Spike2" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 1312, 1056 )

[node name="Spike4" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 1376, 1056 )

[node name="Spike3" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 1248, 1056 )

[node name="Doors" type="Node2D" parent="."]

[node name="Enemy_doors" type="Node2D" parent="Doors"]

[node name="Door" parent="Doors/Enemy_doors" instance=ExtResource( 3 )]
position = Vector2( 1952, 512 )
mode = 1

[node name="Event_doors" type="Node2D" parent="Doors"]

[node name="RigidBody2D" parent="Doors/Event_doors" instance=ExtResource( 3 )]
position = Vector2( 512, 488 )
rotation = 1.5708
mode = 1

[node name="EventHandler" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CurrentRoom" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CurrentRoom"]
position = Vector2( 960, 540 )
shape = SubResource( 46 )

[node name="Objects" type="Node2D" parent="."]

[node name="I_Weapon" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 480, 128 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )

[connection signal="body_entered" from="CurrentRoom" to="." method="_on_CurrentRoom_body_entered"]
[connection signal="body_entered" from="CurrentRoom" to="Enemies" method="_on_CurrentRoom_body_entered"]
[connection signal="body_entered" from="CurrentRoom" to="EventHandler" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Objects/I_Weapon" to="EventHandler" method="_on_I_Weapon_body_entered"]
[connection signal="body_entered" from="Objects/I_Weapon" to="EventHandler" method="_on_Item_body_entered"]
[connection signal="body_entered" from="Objects/I_Weapon" to="Objects/I_Weapon" method="_on_Item_body_entered"]
